--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -12,7 +12,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Babylonica&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap");
 
-
 :root {
   --background-color: rgb(6, 11, 25);
   --border-color: rgb(255, 225, 255, 0.1);
@@ -31,7 +30,11 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  overflow: hidden;
+  overflow: auto;
+
+  @include tablet {
+    overflow: hidden;
+  }
 }
 
 * {
@@ -62,12 +65,16 @@ span {
   height: 100%;
   border-radius: 1.5rem;
   padding: 28px;
-  overflow: hidden;
+  overflow: auto;
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   z-index: 1;
   position: relative;
   background-color: var(--background-color);
   border: 1px solid rgba(255, 255, 255, 0.524);
+
+  @include tablet {
+    overflow: hidden;
+  }
 }
 
 .nav {
@@ -93,19 +100,24 @@ span {
 //   font-family: "Great Vibes", cursive;
 // }
 
-#link {
-  gap: 6rem;
-}
+// #link {
+//   gap: 6rem;
+// }
 
-#social {
-  gap: 3rem;
-}
+// #social {
+//   gap: 3rem;
+// }
 
 .main {
   display: flex;
   position: relative;
   height: 100%;
   gap: 2rem;
+  flex-direction: column;
+
+  @include tablet {
+    flex-direction: row;
+  }
 }
 
 .about {
@@ -133,30 +145,20 @@ span {
     margin-left: auto;
     margin-right: auto;
     font-family: "Aboreto", cursive;
-
   }
 
   &__logo {
     font-family: "Babylonica", cursive;
     font-size: 1.6rem;
-   border-right: 1px solid #9d84ff;
-padding-right: 2rem;
-margin-right: 1rem;
-
-    
+    border-right: 1px solid #9d84ff;
+    padding-right: 2rem;
+    margin-right: 1rem;
   }
 
   &__link {
     color: #9d84ff;
     padding-right: 1rem;
     padding-left: 0.5rem;
-  }
-
-  &__divider {
-    // border-right: 1px solid #9d84ff;
-    // color: transparent;
-    color: #9d84ff;
-  
   }
 
   &__title {
@@ -192,32 +194,52 @@ margin-right: 1rem;
   &__text {
     font-size: 1rem;
     line-height: 1.1rem;
+
+
+    @include desktop {
+      font-size: 1vw;
+      line-height: 1vw;
+    }
   }
 
+  // &__about,
+  // &__contact {
+
+  //   margin-right: 1rem;
+  // }
+
   &__about,
-  &__contact,
-  &__menu-button {
+  &__contact {
     background-color: transparent;
     color: white;
+    // border: 1px solid rgb(161, 159, 159);
+
+    &:hover {
+      background-image: url(https://i.gifer.com/7Ntk.gif);
+      background-position: 40%;
+    }
+  }
+
+  &__menu-button {
+    background-color: transparent;
     &:hover {
       background-image: url(https://assets-global.website-files.com/6398b11ee9bf53ef62055173/642a4cd50700e3c6f5951cda_space2.gif);
       background-position: 40%;
       background-size: cover;
       // border: #9d84ff 1px solid;
-      }
+    }
   }
 
   &__social {
     position: absolute;
     bottom: 1rem;
-    right: 1rem;
+    left: 1rem;
     z-index: 1;
+    padding-left: 1rem;
   }
 
   &__menu {
     position: relative;
-  
-
 
     &-container {
       display: flex;
@@ -247,18 +269,18 @@ margin-right: 1rem;
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: unset;
   gap: 2rem;
   color: white;
   text-align: center;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  border-left: 1px dashed white;
+
+  @include tablet {
+    overflow-y: scroll;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    border-left: 1px dashed white;
+  }
 }
-
-
-
-
 
 ::-webkit-scrollbar {
   width: 6px;
